--- a/introduction/fak.tex
+++ b/introduction/fak.tex
@@ -1,15 +1,19 @@
 \section{Focal adhesion kinase}
-% TODO: more about paxillin, integrin, cancer?
-Focal adhesions (FA) are macromolecular protein complexes which act as a connection hub between the cell, i.e. the cytoskeleton, and the extracellular matrix (ECM). They enable the cell to performing tension forces, but can also trigger mechanical stimuli from the ECM. One important protein associated to FA is the focal adhesion kinase (FAK). FAK occurs in several signalling pathways and is a key player in integrating extracellular stimuli. It is of large interest not least because in cancer cells often an overexpression of FAK can be found \autocite{cancerFAK}.\\
-\\
-FAK consists of four major domains (see \autoref{TOBEADDED}): a FERM domain, a tyrosine kinase domain, a proline rich region and a focal adhesion targeting (FAT) domain.\\
-FERM (4.1 protein, ezrin, radixin and moesin) is a common protein domain, which targets proteins to membranes \autocite{fermdomain} and consists of three subdomains F1, F2 and F3. In the F2 subdomain there is the basic patch  ($^{216}$KAKTLRK$^{222}$), which is a prominent binding site for phosphatidylinositol-4,5-bisphosphate (\pip), a phospholipid generated locally in FA due to integrin signaling \autocite{pap001}.\\
-The kinase domain consists of the C-lobe, the activation loop and the N-lobe. The activation loop contains \acid{Y}{576}\,and \acid{Y}{577}, which are linked to the catalytic turnover of the kinase \autocite{tyrosinePhosphor}. The C-lobe also provides a binding site for \pip\,which is located next to the basic patch of the FERM domain \autocite{pap002}.\\
+% TODO: scaffolding function of FAK, clustering
+% TODO: more about cluster shape and so on
+Focal adhesions (FA) are macromolecular protein complexes which act as a connection hub between the cell, i.e. the cytoskeleton, and the extracellular matrix (ECM). They enable the cell to performing tension forces, but can also trigger mechanical stimuli from the ECM. One important protein associated to FA is the focal adhesion kinase (FAK). FAK occurs in several signalling pathways and is a key player in integrating extracellular stimuli. It is of large interest not least because in cancer cells often an overexpression of FAK can be found and understanding the activation process of FAK could give rise to new cancer treatments \autocite{cancerFAK}.
+\subsection{Structure}
+FAK consists of four major domains (see \autoref{TOBEADDED}): a FERM domain as N-terminal, a tyrosine kinase, a proline rich region and a focal adhesion targeting (FAT) domain as C-terminal.\\
+FERM (4.1 protein, ezrin, radixin and moesin) is a common protein domain, which targets proteins to membranes \autocite{fermdomain} and consists of three subdomains F1, F2 and F3. In the F2 subdomain there is the basic patch  ($^{216}$KAKTLRK$^{222}$), which is a prominent binding site for phosphatidylinositol-4,5-bisphosphate (\pip). This phospholipid is locally generated in FA due to integrin signaling \autocite{pap001}.\\
+The kinase domain of the C-lobe, the activation loop and the N-lobe. The catalytic activity of kinase is regulated by the phosphorylation of \acid{Y}{576}\,and \acid{Y}{577}, which are located in the activation loop \autocite{tyrosinePhosphor}. The C-lobe also provides a binding site for \pip\,which is located next to the basic patch of the FERM domain \autocite{pap002}.\\
 The FERM domain and the kinase are connected by a linker region. Here the main autophosphorylation site \acid{Y}{397} can be found \autocite{pap001}.\\
-FAT is linked to the kinase by the proline rich region. FAT targets to FA by interacting with talin an paxillin, which are proteins associated with FA \autocite{fatdomain}.\\
-\\
-A maximum catalytic turnover requires \acid{Y}{576}\,and \acid{Y}{577} in the activation loop to be phosphorylated. In the inactive state this region is shielded by the FERM domain. Also the autophosphorylation site \acid{Y}{397} is isolated by the FERM domain. Therefore an activation is only possible if the FERM domain dissociate at least partly from the kinase \autocite{structFAK}. One important activation process is induced by the allosteric effect of \pip\,binding to the basic patch in the F2 subdomain, which induces long ranged configurational changes yielding in a spanning of the interface of F1 subdomain and the N-lobe. In addition to this the linker region get less stronger bound so that an autophosphorylisation of \acid{Y}{397} gets promoted. Phosphorylated \acid{Y}{397} is a suitable binding site for SH2, a subdomain of proteins from the Src kinase family. The presence of a kinase and the partial opening of the FERM kinase interface leads to a phosphorylisation of \acid{Y}{576}\,and \acid{Y}{577}. The resulting Src-FAK complex can act as an fully active kinase. In this state the FERM domain dissociates from the kinase \autocites{pap003}{pap001}. %sure that they are fully open?
-Several other binding partners, e.g. growth factors or paxillin, can lead to an activation of FAK \textbf{CITATION}.\\
-\\
-As explained above autophosphorylisation of \acid{Y}{397} is a crucial step for activation. It has been shown, that this autophosphorylisation occurs intermolecular, i.e. trans-phosphorylisation \autocite{transAuto}, in FAK dimers. This dimerisation can be found in several proteins containing a FERM domain. The interaction emerges around \acid{W}{266} and has an area of about 1350 \AA$^2$ \autocite{fakdimers}. Besides dimers also larger clusters of FAK can emerge, from which additional signaling processing can start \autocite{dimersVsClusters}.\\ %TODO: mehr über FERM:FERM?
-
+The FAT domain is linked to the kinase by a flexible proline rich region. FAT targets to FA by interacting with talin and paxillin, which are proteins associated with FA \autocite{fatdomain}.
+\subsection{Activation}
+A maximum catalytic turnover requires \acid{Y}{576}\,and \acid{Y}{577} in the activation loop to be phosphorylated. In the inactive state this region is shielded by the FERM domain. Also the autophosphorylation site \acid{Y}{397} is isolated by the FERM domain. Therefore an activation is only possible if the FERM domain dissociate at least partly from the kinase \autocite{structFAK}. FAK triggers several stimuli, but in this thesis the main focus lies on the allosteric effect of \pip\,binding to the basic patch.\\
+% quelle -5: PIP2 and proteins: in- teractions, organization, and information flow
+\pip\,is a has a net charge of -4, but in presence of K the deprotonated state gets promoted resulting in a net charge of -5. The electrostatic binding of \pip\,to the basic patch in the F2 subdomain results in long ranged configurational changes, which also influence the interface between the F1 subdomain and the N-lobe. Also the linker region gets less stronger bound so that an autophosphorylisation of \acid{Y}{397} is promoted. Phosphorylated \acid{Y}{397} is a suitable binding site for SH2, a subdomain of proteins from the Src kinase family. The presence of a kinase and the partial opening of the FERM kinase interface leads to a phosphorylisation of \acid{Y}{576}\,and \acid{Y}{577}. The resulting Src-FAK complex can act as an fully active kinase. In this state the FERM domain dissociates from the kinase \autocites{pap003}{pap001}.
+\subsection{Dimerization and clustering}
+%%%%%%%%%%%%
+% TODO: opening of interface , clustering, characteristics of the clustering
+%%%%%%%%%%%%%
+The FERM domain induces a dimerization of FAK as it is doing in other proteins containing a FERM domain as well. The interaction emerges around \acid{W}{266} in the connected domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain respectively \autocite{fakdimers}. It has been shown, that the autophosphorylation happens in trans \autocite{transAuto} and requires \acid{W}{266} \autocite{fakdimers}. Besides dimers larger clusters of FAK can emerge, which can contribute to additional signaling processes \autocite{dimersVsClusters}.
