--- a/document.tex
+++ b/document.tex
@@ -37,7 +37,7 @@ oneside, % oneside / twoside
 \captionsetup[subfigure]{labelformat=simple, labelsep=colon}
 \renewcommand{\thesubfigure}{Figure~\thefigure \alph{subfigure}}
 
-\includeonly{introduction/fak, introduction/md, introduction/fec}
+%\includeonly{introduction/fak, introduction/md, introduction/fec}
 
 \begin{document}
 	
@@ -47,4 +47,6 @@ oneside, % oneside / twoside
 \include{introduction/fec}
 \chapter{Methods}
 \include{introduction/methods}
+\chapter{Results}
+\include{results/umbrella}
 \end{document}
