--- a/introduction/fec.tex
+++ b/introduction/fec.tex
@@ -4,7 +4,7 @@ Below the basic concept of free energy is outlined as well as a practical method
 \subsection{Partition functions and free energies}
 The behaviour of a system depends on the interaction with the outside of the system. These interactions are classified in ensembles. The most important are the microcanonical ensemble ($N, V$ and $E$ constant), canonical ensemble ($N, V$ and $T$ constant) and the isothermal-isobaric ensemble ($N, p$ and $T$ constant).\\
 \\
-In the microcanonical ensemble the probability, that a system enters a microstate with energy $E' = E(\mathbf{q}, \mathbf{p})$ ($\mathbf{q}, \mathbf{p}$ are the positions and momenta of the particles respectively), is equal for all $E' < \left|E + \diff E\right|$ and $0$ else. Therefore the partition function $\Omega$ is given as
+In the microcanonical ensemble the probability, that a system enters a microstate with energy $E' = E(\mathbf{q}, \mathbf{p})$ ($\mathbf{q}, \mathbf{p}$ are the positions and momenta of the particles respectively), is equal for all $\left|E' - E\right| < \diff E$ and $0$ else. Therefore the partition function $\Omega$ is given as
 \begin{equation}
 \Omega(N, V, E) = C_0 \int \delta\left(\mathcal{H}(\mathbf{q}, \mathbf{p}) - E\right) \diff \mathbf{q} \diff \mathbf{p}
 \end{equation}
