Just deleted stuff.

--- a/introduction/fak.tex
+++ b/introduction/fak.tex
@@ -25,4 +25,4 @@ The FERM domain induces a dimerization of FAK, as it is doing in other proteins 
 For the dimerization of the FERM domains \pip{} is not needed. However, an enriched concentration of FAK is needed to observe FAK dimers in cells, which is the case at FA. It is still unclear how the dimer is stabilized at membranes, where the basic patch is also required for ligand binding \autocite{fakdimers}.\\
 It has been shown that FAK is autophosphorylated by other FAK molecules (intermolecular) and that this process is promoted by dimerization of FAK (not only due to FERM-FERM domains) \autocite{dimersVsClusters}.\\
 \\
-Although \pip{} is not required for dimerization, it induces clustering of several FAK {\it in vitro} on membranes \autocite{pap001}. Because dimers support autophosphorylation of FAK, it is not surprising that the same effect is observed in clusters. However, these clusters can trigger additional biochemical stimuli \autocite{dimersVsClusters} and may play an important role in the scaffolding function of FAK for FA \autocite{pap001}.
+Although \pip{} is not required for dimerization, it induces clustering of several FAK \textit{in vitro} on membranes \autocite{pap001}. Because dimers support autophosphorylation of FAK, it is not surprising that the same effect is observed in clusters. However, these clusters can trigger additional biochemical stimuli \autocite{dimersVsClusters} and may play an important role in the scaffolding function of FAK for FA \autocite{pap001}.
